--- a/templates/base.index.html
+++ b/templates/base.index.html
@@ -11,6 +11,45 @@
     <script src="https://kit.fontawesome.com/15b6d67935.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <script>
+        window.addEventListener('load', function () {
+            document.getElementById('preloader').style.display = 'none';
+        });
+    </script>
+    <style>
+        #preloader {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #fff; /* or dark background */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 9999;
+        }
+
+        .spinner {
+        width: 50px;
+        height: 50px;
+        border: 5px solid #ccc;
+        border-top-color: #333;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+        }
+
+        @keyframes spin {
+        to {
+            transform: rotate(360deg);
+        }
+        }
+
+    </style>
+    <div id="preloader">
+  <div class="spinner"></div>
+</div>
+
     {% include 'header.html' %}
     
        {% block content %}
