--- a/templates/header.html
+++ b/templates/header.html
@@ -7,10 +7,11 @@
                 <li class="navLink"><a href="#">Adventures</a></li>
                 <li class="navLink"><a href="/register">Become An Author</a></li>                
                 <li class="navLink"><a href="/catalog">Comic Catalog</a></li>
+                <li class="navLink"><a href="#">Blog</a></li>
             </ul>
             <ul id="navListRight">
-                <li class="navLinkRight"><a href=""><i class="fa-light fa-user-cowboy"></i> Login</a></li>
-                <li class="navLinkRight"><a href=""><i class="fa-kit fa-light-user-cowboy-circle-plus"></i> Register</a></li>
+                <li class="navLinkRight"><a href="/login"><i class="fa-light fa-user-cowboy"></i> Login</a></li>
+                <li class="navLinkRight"><a href="/login"><i class="fa-kit fa-light-user-cowboy-circle-plus"></i> Register</a></li>
                 <li class="navLinkRight"><i class="fa-light fa-magnifying-glass"></i> Search</li>
             </ul>
         </nav>
