--- a/templates/404.html
+++ b/templates/404.html
@@ -2,5 +2,5 @@
 {% block title %}404 Scary Youkai{% endblock %}
 {% block content %}
     <h1>404</h1>
-    <p>You have landed on an ethereal plane or this a youkai has taken this page away. Most definitely a youkai. <a href="javascript:history.back()">Return</a> with haste lest they grab you too! </p>
+    <p>You either have landed on an ethereal plane or a youkai has taken this page away. Most definitely a youkai. <a href="javascript:history.back()">Return</a> with haste lest they grab you too! </p>
 {% endblock %}
