--- a/templates/base.index.html
+++ b/templates/base.index.html
@@ -2,14 +2,15 @@
 <html>
 <head>
     <title>{% block title %}Default Title{% endblock %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.14.1/jquery-ui.js" integrity="sha256-9zljDKpE/mQxmaR4V2cGVaQ7arF3CcXxarvgr7Sj8Uc=" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>    
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <link rel="stylesheet" href="../assets/css/master.css">
     <link rel="stylesheet" href="../assets/css/fonts.css">
     <script src="../assets/js/master.js"></script>
-    <script src="https://kit.fontawesome.com/15b6d67935.js" crossorigin="anonymous"></script>    
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/15b6d67935.js" crossorigin="anonymous"></script>        
+    <script src="/assets/js/UserFunctions.js"></script>
 </head>
 <body>
     <script>
@@ -41,9 +42,9 @@
         }
 
         @keyframes spin {
-        to {
-            transform: rotate(360deg);
-        }
+            to {
+                transform: rotate(360deg);
+            }
         }
 
     </style>
