--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,8 +1,21 @@
 {% extends 'base.index.html' %}
 {% block title %}Your Profile Home{% endblock %}
 {% block content %}
+<script src="/assets/js/UserFunctions.js"></script>
+<script>
+    const CURRENT_USER_ID = {{ userID|json_encode|raw }};
+</script>
+
 <div class="profileHeader">
-    <p>Welcome {{users.firstName}}!</p>    
+        <div id="profileName">
+            <p>Welcome {{users.firstName}}!</p>            
+        </div>
+        <div id="profileAvatar" onclick="triggerFilePicker()">
+            <img id="dashboardAvatar" src="data:image/jpeg;base64,{{ users.avatar }}" alt="User Avatar">
+            <span class="changeAvatar"><i class="fa-solid fa-pencil"></i></span>
+            <input type="file" id="avatarInput" accept="image/*" style="display: none;" onchange="uploadImage()" />
+        </div>
+
 </div>
     <div class="profileStory">
         <div class="profileStats">A glance of your stats</div>        
@@ -17,10 +30,23 @@
     </div>
     <div class="resultsSection">
         <div class="profileResults edit active" data="profileTab">
-            <form class="updateProfile" method="POST" action="/includes/updateProfile.php">
+            <input-group>
                 <label for="email">Change Email:</label>
                 <input type="email" name="email">
-            </form>
+            </input-group>
+            <input-group>
+                <label for="email">Personal Website:</label>
+                <input type="email" name="email">
+            </input-group>
+            <input-group>
+                <label for="email">Personal Website:</label>
+                <input type="email" name="email">
+            </input-group>
+            
+            <div class="deleteAccount">
+                If you want to stop adventuring all together, make sure you have all your affairs in order before you stop.
+                <button type="submit" class="danger" onclick="deleteAccount()">Delete Your Account</button>
+           </div>
         </div>
         <div class="profileResults subscr" data="profileTab">
             <p>This is to build out the subscriptions section</p>
