--- a/templates/base.index.html
+++ b/templates/base.index.html
@@ -8,7 +8,7 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <link rel="stylesheet" href="../assets/css/master.css">
     <link rel="stylesheet" href="../assets/css/fonts.css">
-    <script src="../assets/js/master.js"></script>
+    <script src="../assets/js/templates/master.js"></script>
     <script src="https://kit.fontawesome.com/15b6d67935.js" crossorigin="anonymous"></script>        
     <script src="/assets/js/UserFunctions.js"></script>
 </head>
