--- a/templates/registration.html
+++ b/templates/registration.html
@@ -12,29 +12,29 @@
             <div class="registerTop">
                 <input-group>
                     <label for="username">First Name</label>
-                    <input type="text" name="firstName" required> 
+                    <input type="text" name="FirstName" required> 
                 </input-group>
                 <input-group>
                     <label for="username">Last Name</label>
-                    <input type="text" name="lastName" required>
+                    <input type="text" name="LastName" required>
                 </input-group>
             </div>
             <input-group>
                 <label for="email">email</label>
-                <input type="email" name="email" required>    
+                <input type="email" name="Email" required>    
             </input-group>
             <input-group>
                 <label for="username">Username</label>
-                <input type="text" name="username" required>    
+                <input type="text" name="Username" required>    
             </input-group>
             <input-group>
                 <label for="password">Password</label>
-                <input type="password" name="password" required>    
+                <input type="password" name="Password" required>    
             </input-group>
             
             <input-group>
                 <label for="birthday">Birthday</label>
-                <input type="text" name="birthday" required>    
+                <input type="text" name="Birthday" required>    
             </input-group>
             <button class="submitBtn" name="register">Register</button>
         </form>
