--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -38,6 +38,10 @@ input{
 	border-radius: 5px;
 	border: none;
 	width:100%;
+	font-family:"Quicksand";
+	font-weight: bold;
+	font-size: 16px;
+	padding-left:5px;
 }
 #headerWrapper{
 	display:grid;
@@ -256,17 +260,21 @@ p.formText{
   width:100%;
 }
 .deleteAccount .danger{
-	border:none;
-	background:none;
+
 	color:#fff;
 	border-radius: 20px;
 	padding:10px;
-	font-size:10px;
+	font-size:12px;
 	cursor: pointer;
+	border: 1px solid rgb(181, 3, 3);
+  background: rgba(171, 0, 0, 0.6);
 }
 .deleteAccount .danger:hover{
 	border:1px solid rgb(181, 3, 3);
-	background:rgba(171, 0, 0, 0.6);
+	background:rgba(218, 56, 56, 0.6);
+}
+.deleteAccount, .deleteAccount button {
+    font-size:14px;  
 }
 .inputGroup {
   display:flex;
