--- a/templates/header.html
+++ b/templates/header.html
@@ -12,9 +12,9 @@
                 {% set loggedIn = logged_in %}
                 {{users.username}}
                 {% if loggedIn == true %}
-                    <li class="navLinkRight"><a class="navLinkBtn" href="/dashboard" data-="loggedIn"><i class="fa-light fa-circle-user"></i>Your Profile</a></li>
+                    <li class="navLinkRight"><a class="navLinkBtn" href="/dashboard" data-="loggedIn"><i class="fa-slab fa-regular fa-circle-user"></i> Your Profile</a></li>
                     {% else %}
-                    <li class="navLinkRight"><a class="navLinkBtn" href="/login"><i class="fa-light fa-user-cowboy"></i> Login/Register</a></li>
+                    <li class="navLinkRight"><a class="navLinkBtn" href="/login"><i class="fa-jelly fa-regular fa-arrow-right-to-bracket"></i> Login/Register</a></li>
                 {% endif %}
                 <li class="navLinkRight"></li>
             </ul>
